--- a/code/Testing stuff.html
+++ b/code/Testing stuff.html
@@ -2,12 +2,22 @@
 <html lang="en-us"
 <title>Notes</title>
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+  </style>
     <style>
         h1 {
     color: rgb(255, 189, 240);
     background-color: rgb(216, 238, 255);
     border: 1px solid rgb(75, 6, 109);
   }
+@font-face {
+  font-family: Main font;
+  src: sansation_light.woff;
+}
 
   p {
     color: indigo;
