do fonts work??? lets see shall we

--- a/code/Testing stuff.html
+++ b/code/Testing stuff.html
@@ -2,22 +2,26 @@
 <html lang="en-us"
 <title>Notes</title>
 <head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap">
+<style>
+body {
+  font-family: "Oswald Extralight", sans-serif;
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-  </style>
+
     <style>
+       {
+      @font-face {
+        font-family:"oswald extralight", sans serif;
+        src: url(https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap);
+      }: 
+    }
         h1 {
     color: rgb(255, 189, 240);
     background-color: rgb(216, 238, 255);
     border: 1px solid rgb(75, 6, 109);
   }
-@font-face {
-  font-family: Main font;
-  src: sansation_light.woff;
-}
 
   p {
     color: indigo;
@@ -32,6 +36,7 @@
   }
     </style>
     <body>
+   
     <meta charset="utf-8
     <meta name="viewport" content="width=device-width">
         <p>"P" is the code for paragraphs</p>
@@ -66,4 +71,5 @@
     </body>
 </head>
 
-<!--I tried to put the CSS in a different file but it didn't work :( im not sure what to do about that-->
+<!--I tried to put the CSS in a different file but it didn't work :( im not sure what to do about that--!>
+<!--I think the font works, but it looks a bit different. At least SOMETHING worked--!>
